[Aditi Mittal] Add, UC 17 - Spring Framework Integration